# modern-todo

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: distribution.md  project-structure.md
scripts/: package.ps1  prepare-updater-config.cjs  set-version.cjs  setup-updater-secrets.ps1
src/: App.css  App.tsx  installerConfig.test.ts  sidebarLayout.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260504143000_init.sql
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  periods.test.ts  periods.ts  planStats.test.ts  planStats.ts  runtimeUpdater.ts  taskRules.test.ts  taskRules.ts  updateService.test.ts  updateService.ts
